.opsera-voting-app/k8s/overlays/staging/vote-preview-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vote-preview
  labels:
    app.kubernetes.io/name: vote
    app.kubernetes.io/component: frontend
    service-type: preview
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: vote
